2011-03-23  vadim  <vadim@netcitadel.com>

	* addressObjectMaker.cpp (createObject): see #1548 Improved
	algorithm used to deduplicate Network objects on import.

	* FWWindow.cpp (prepareToolsMenu): fixed SF bug 3238026: build
	failure on systems without net-snmp development libraries.

2011-03-22  vadim  <vadim@netcitadel.com>

	* parsers/pix.g (acl_xoperator_src): first attempt at PIX/ASA
	access-list import. Not done yet.

	* parsers/pix.g (port_object): see #2234 added support for import
	of "obejct-group service name tcp|udp" constructs in ASA 8.3 with
	subsequent "port-object" statements.

2011-03-21  vadim  <vadim@netcitadel.com>

	* PortRangeConverter.h (PortRangeConverter): see #2252 TCP and UDP
	service objects that define port ranges assume port ranges are
	inclusive, that is, range boundaries are included in the
	match. This is the behavior of port range matches in iptables and
	PF, however policy compilers for Cisco IOS ACL and PIX used to
	convert these objects into ios and pix access list configurations
	that excluded port range boundaries from the match. This behavior
	made TCP and UDP service objects with port ranges incompatible
	between firewall platforms, that is, the same object could not be
	used in rules of firewall objects of different platforms because
	generated configurations would behave differently. This change
	makes port ranges inclusive in generated IOS and PIX
	configurations. Users should verify their configurations and
	adjust port range boundaries in TCP and UDP service objects if
	necessary.

2011-03-20  vadim  <vadim@netcitadel.com>

	* ImportFirewallConfigurationWizard.cpp (accept): see #2253
	"importer should not creates objects while still in the middle of
	the wizard". Importer wizard creates new objects in the object
	tree only when user clicks Finish and abandons results if they
	click Cancel.

2011-03-19  vadim  <vadim@netcitadel.com>

	* IOSImporter.cpp (createTCPUDPNeqObject): see #2248 implemented