@@ -1,3 +1,9 @@
+2011-03-24  vadim  <vadim@netcitadel.com>
+
+	* getServByName.cpp (getPortByName): see #2268 updated list of
+	named tcp and udp ports recognized by the importer for Cisco ASA.
+	It is still unclear what port does the name "cifs" correspond to.
+
 2011-03-23  vadim  <vadim@netcitadel.com>
 
 	* addressObjectMaker.cpp (createObject): see #1548 Improved
